<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, CAENRFIDEasyControllerActivity!</string>
    <string name="app_name">RADIOscan</string>
    <string name="add_reader_button">Add Reader</string>
    <string name="tcp_label">Insert IP of the reader</string>
    <string name="tcp_confirm">Select</string>
    <string name="tcp_cancel">Cancel</string>
    <string name="default_ip">10.0.32.113</string>
    <string name="bt_selection_title">Choose a bluetooth device</string>
    <string name="inventory_button_start">Start Inventory</string>
    <string name="inventory_button_stop">Stop Inventory</string>
    <string name="refresh_button">Refresh</string>
    <string name="total_found">TOTAL FOUND:</string>
    <string name="current_found">Tags/Sec:</string>
    <string name="clear_button">Clear</string>
    <string name="caen_rfid_srl">Radio6ense</string>
    <string name="reader_image">Reader Image</string>
    <string name="reader_configuration_item">Reader Configuration</string>
    <string name="preferences_item">Preferences</string>
    <string name="power_label">Reader Power</string>
    <string name="todo">TODO</string>
    <string name="modulation_label">Link Profile</string>
    <string name="zero">0</string>
    <string name="lbt_checkbox_label">LBT/FHSS?</string>
    <string name="apply">Apply</string>
    <string name="min_power">Min</string>
    <string name="max_power">Max</string>
    <string name="antennae_selection_label">Antenna Selection</string>
    <string name="antenna_one_checkbox">Antenna 1  -  (Ant0)</string>
    <string name="antenna_two_checkbox">Antenna 2  -  (Ant1)</string>
    <string name="antenna_three_checkbox">Antenna 3  -  (Ant2)</string>
    <string name="antenna_four_checkbox">Antenna 4  -  (Ant3)</string>
    <string name="protocol_configuration_label">Protocol Paramenters</string>
    <string name="q_parameter">&quot;Q value&quot;</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="q_description">NOTE: \"Q\"  parameter improves anti-collision, reducing acquisition speed. If expected tags are a few, \"Q\" should set to a smaller value (for example \"Q\" = 3), but in case of many , should be increased to 7/8. Higher values over 8 can dramatically reduce performances and should avoid or used only in well-known/custom contexts.</string>
    <string name="session_parameter">Session</string>
    <string name="session_description">NOTE:  \"Session\" parameter optimizes performances and connection bandwidth. Tag state is \"discoverable\"; for a while (or indefintively) depending on this parameter. Environment temperature can affect the time of the \&quot;discoverable\&quot; state as decribed below.</string>
    <string name="session1_note">S0: tag is always \"discoverable\"</string>
    <string name="session2_note">S1: tag is \"discoverable\" after at least X secs, where  0,5s&lt; X &lt;5s.</string>
    <string name="session3_note">"S2: tag is \"discoverable\" after at least 2 second of RF inactivity. "</string>
    <string name="session4_note">"S3: tag is \"discoverable\" after at least 2 second of RF inactivity. "</string>
    <string name="antenna_instruction">Tick checkbox to enable antennas.</string>
    <string name="antenna_note">NOTE: disabled checkbox means that the relative antenna is not available for this reader.</string>
    <string name="antenna_green_note">checkbox means that antenna status is good.</string>
    <string name="antenna_yellow_note">checkbox means that antenna is working but with poor signal (check cable?)</string>
    <string name="antenna_red_note">checkbox means that antenna is broken or not attached.</string>
    <string name="green">GREEN</string>
    <string name="yellow">YELLOW</string>
    <string name="red">RED</string>
    <string name="session_note">WARNING on S2 / S3 session: before a tag turns \&quot;discoverable\&quot; again, it should not be energized by any RF field, for an amount of time depending on the tag manufacturer, but compliant with the specification above. If a tag is energized during this sessions, it will be undiscoverable indefitively. Please, refer to the tag documentation for further details.</string>
    <string name="color_pick_label">Inventory items color</string>
    <string name="preferences_title">Preferences</string>
    <string name="color_picker_button">Choose . . .</string>
    <string name="beep_label">Beep on tags found</string>
    <string name="ascii_label">EPC\'s ID as ASCII</string>
    <string name="inventory_mode_item">Inventory Options</string>
    <string name="inventory_mode_title">Inventory Options</string>
    <string name="inventory_mode_trigger">Inventory on button press</string>
    <string name="inventory_mode_mask_checkbox">Enable Target</string>
    <string name="mask_option_label">TARGET OPTIONS</string>
    <string name="target_by_select_tag_radiobutton">" by selecting in the list below:"</string>
    <string name="target_by_mask_radiobutton">" or specifing a bytes mask: "</string>
    <string name="target_start_with_radiobutton">Start with this mask</string>
    <string name="target_end_with_radiobutton">End with this mask</string>
    <string name="target_match_radiobutton">match</string>
    <string name="target_not_match_radiobutton">not match</string>
    <string name="target_both_match_radaiobutton">match all</string>
    <string name="target_ascii_mask_checkbox">ASCII input</string>
    <string name="target_selected_ascii_checkbox">ASCII format</string>
    <string name="start_byte_mask_label"> starting from byte:</string>
    <string name="program_id_button">Program tag</string>
    <string name="program_id_title">Program Tag ID</string>
    <string name="program_id_note">" Put the tag you want to program under the antenna and press the button. Check 'Force Programming ?' if tag to program is different by the selected one."</string>
    <string name="program_tag_ascii_input_checkbox">ASCII Input</string>
    <string name="program_tag_password_label">Password:</string>
    <string name="program_tag_password_note">NOTE: Password must be a 4 byte integer hex string, ( from "0" to "FFFFFFFF" ). Empty password means no password. </string>
    <string name="program_tag_force_id"> Force Programming ?</string>
    <string name="program_tag_selected_tag_label">Tag Selected:</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_read_and__write">Read and Write</string>
    <string name="read_and_write_title_label">Read And Write</string>
    <string name="read_and_write_activity">Read And Write</string>
    <string name="read_and_write_address_label">0000</string>
    <string name="read_and_write_init_address_label">Address:</string>
    <string name="read_and_write_bank_prompt">choose bank</string>
    <string name="read_and_write_read_button">Read</string>
    <string name="read_and_write_password_edittext"></string>
    <string name="read_and_write_password_label">Password:</string>
    <string name="read_and_write_bank_label">Choose bank:</string>
    <string name="read_and_write_note">Password and Address must be hexadecimal  numbers: a word (i.e. form \'0\' to \'FFFF\') for Address and a dword (from \'0\' to\'FFFFFFFF\') for Password.Cells filled with ???? means not readeable word.</string>
    <string name="read_and_write_ascii_input">ASCII Input</string>
    <string name="read_and_write_write_button">Write</string>
    <string name="title_activity_lock_tag">LockTagActivity</string>
    <string name="lock_tag_title">Lock Tag</string>
    <string name="lock_tag_bank_label">Choose bank:</string>
    <string name="lock_tag_action_label">Choose action:</string>
    <string name="lock_tag_apply_button">Apply lock rule</string>
    <string name="lock_tag_pwd_label"> Pwd:</string>
    <string name="lock_tag_setpwd_button">Set Password</string>
    <string name="lock_tag_killpwd_label">Kill Password:</string>
    <string name="lock_tag_accesspwd_label">Access Password:</string>
    <string name="lock_tag_setpwd_label">Set Kill &amp; Access passwords</string>
    <string name="lock_tag_setpwd_note">Common operation with tags can be done trough a password. EPC C1G2 tags and reader provide a common password mechanism. Before changing a bank security state, you must set a valid (4 bytes long) password.</string>
    <string name="title_activity_kill_tag">KillTagActivity</string>
    <string name="kill_tag_title">Kill Tag</string>
    <string name="kill_tag_kill_button">Kill Tag</string>
    <string name="kill_tag_pwd_label">Kill password:</string>
    <string name="easy_controller_products_description">RADIOscan provides a demo for Radio6ense Products</string>
    <string name="Inventory_mode_rssi_checkbox">Enable RSSI</string>
    <string name="banner">Easy Controller</string>
    <string name="rt0005_ctrl_room">RT0005 Control Room</string>
    <string name="rt0005taglabel">RT0005 Control Room</string>
    <string name="rt0005_histogram_alarm">Out of range alarm:</string>
    <string name="rt0005_est_time_arrival">Estimed Time of Arrival:</string>
    <string name="rt0005_mem_full">Memory Full:</string>
    <string name="rt0005_rem_shelf_life">Remaining Shelf Life:</string>
    <string name="rt0005_mean_kinetic_temp">Mean Kinetic Temperature:</string>
    <string name="rt0005_battery_status">Battery Status:</string>
    <string name="rt0005_shipping_date">Shipping Date:</string>
    <string name="rt0005_stop_date">Stop Date:</string>
    <string name="rt0005_refresh_state_button_caption">Refresh State</string>

</resources>