<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".TCPSelection" >

    <TextView
        android:id="@+id/tcp_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/tcp_label"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/tcp_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:ems="10"
        android:gravity="center"
        android:inputType="text"
        android:singleLine="true"
        android:text="192.168.1.254" >

        <requestFocus />
    </EditText>

    <LinearLayout
        android:id="@+id/tcp_confirm_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:gravity="bottom|center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/tcp_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="SelectReader"
            android:text="@string/tcp_confirm" />

        <Button
            android:id="@+id/tcp_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="Cancel"
            android:text="@string/tcp_cancel" />
    </LinearLayout>

</LinearLayout>